--- a/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
@@ -17,5 +17,7 @@
 }
 
 <div class="pager">
-    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
+   @* @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))*@
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", 
+        new { page = x, category = Model.CurrentCategory }))
 </div>
