--- a/SportsStore/SportsStore.WebUI/Views/Cart/Index.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Cart/Index.cshtml
@@ -22,6 +22,14 @@
                 <td align="left">@line.Product.Name</td>
                 <td align="right">@line.Product.Price.ToString("c")</td>
                 <td align="right">@((line.Quantity * line.Product.Price).ToString("c"))</td>
+                <td>
+                    @using (Html.BeginForm("RemoveFromCart", "Cart"))
+                    {
+                        @Html.Hidden("ProductId", line.Product.ProductID)
+                        @Html.HiddenFor(x => x.ReturnUrl)
+                        <input class="actionButtons" type="submit" value="Remove" />
+                    }
+                </td>
             </tr>
         }
     </tbody>
@@ -36,4 +44,5 @@
 </table>
 <p align="center" class="actionButtons">
     <a href="@Model.ReturnUrl">Continue shopping</a>
+    @Html.ActionLink("Checkout now", "Checkout")
 </p>
